[package]
name = "raskrasser"
version = "0.1.0"
authors = ["Roman Chumak <p4@phygitalism.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
obj = "0.10.1"
bvh = "0.3.2"
nalgebra = "0.18"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
rayon = "1.5.0"
