[package]
name = "eyek"
version = "0.2.0"
authors = ["Roman Chumak <p4ymak@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.12"
obj = "0.10.1"
bvh = "0.3.2"
nalgebra = "0.18"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
rayon = "1.5.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
