[package]
name = "eyek"
version = "0.2.8"
authors = ["Roman Chumak <p4ymak@yandex.ru>"]
edition = "2021"

[dependencies]
image = "0.24.8"
obj = "0.10.2"
bvh = "0.4.0"
serde = "1.0.196"
serde_json = "1.0.113"
serde_derive = "1.0.196"
rayon = "1.8.1"
triangle = "0.2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
